test/arrays/sungeun/invalid_block_reindex1.good
invalid_block_reindex1.chpl:19: error: halt reached - invalid reindex for Block: distribution bounding box (low) out of range in dimension 1
